# navigation_experiments

./: .gitignore  README.md  plot_angle_diff.py  plot_path.py  pure_rotation_publisher_2_relay.py
action_scripts/: Untitled.ipynb  automatic_execution_analysis.py  call_exe_path_action.py  data_analysis.py  execute_fake_path.py  get_best_configuration.py  store_and_execute_fake_path.py
action_scripts/cfg/: params.yaml  sim.yaml  sino.yaml  sino_middle.yaml  sino_short.yaml
action_scripts/mocks/: fake_imu_publisher.py
action_scripts/results/: results.txt  results_2.txt  results_corridor_toru15_10m.txt  results_corridor_toru15_real_10m.txt  results_fake.txt  results_real_15.txt  results_sino_middle.txt
action_scripts/utilities/: configuration.py  data_analysis.py  execution_tools.py  util_functions.py
config/bitmaps/: demo.world
config/move_base/: costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base_params.yaml
fake_imu/: CMakeLists.txt  setup.py
launch/: move_base.launch  stage.launch
localization/robot_ekf/: ekf.launch
magazino_fdd/magazino_fdd/: CMakeLists.txt  package.xml
map/default/: map.yaml
motion_analysis/: README.md
motion_analysis/odwa_param_tuning/: data_analysis.py  execute_default_path.py  execution_analyzer_standalone.py
motion_analysis/sbpl_primitives_optimizer/: current_configurations.yaml  primitives_optimizer.py  results.xlsx
move_base_utilities/: README.md
move_base_utilities/multi_robot_time_estimation/: CMakeLists.txt  README  package.xml  server.py  setup.py
move_base_utilities/multi_robot_time_estimation/nodes/: client.py  server.py  simple_client.py
move_base_utilities/multi_robot_time_estimation/src/multi_robots_comm/: client_standalone.py  contract_net_client.py  contract_net_server.py  time_estimator.py
move_base_utilities/primitives_analysis/: package.xml  sbpl_primitives_analysis.py  setup.py
multi_stage/: amcl_stage.launch  amcl_stage_2.launch  cave.pgm  contract_net_client.py  demo.world  frames.gv  map.yaml  multi_move_base.launch  stage_multi.launch
navigation_planner_changer/: README
odwa_param_tuning/: automatic_execution_analysis.py  execute_fake_path.py  oriented_dwa_planner.yaml
odwa_param_tuning/cfg/: corridor.yaml  (+1 more)
plotting_scripts/: odom_comparison.py  path_comparison.py  plot_path.py
primitives_attempts/: sbpl_attempt_1.mprim
robot_commands/: pure_rotation_publisher_2_relay.py
ros_tools/: rosnode_process.py
time_estimation/: CMakeLists.txt  client.py
time_estimator/: simple_wip_time_estimator.py
velocity_analyzer/: results  velocity_profile_analyzer.py
(+53 files in other folders)
