<?xml version="1.0"?>
<package>
  <name>multi_robots_comm</name>
  <version>0.0.2</version>
  <description>The multi_robots_comm package</description>

  <maintainer email="banos@magazino.eu">Jose M Banos</maintainer>

  <license>LGPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>

</package>
